// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  info={undefined}
  render={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;

exports[`with renderError and infoError renders error 1`] = `
<div>
  Error: 
  foo
</div>
`;

exports[`with renderError and without infoError renders edit 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  info={undefined}
  render={[Function]}
  renderError={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;

exports[`with renderLoading and fetchingInfo renders loading correctly 1`] = `
<div>
  Loading
</div>
`;

exports[`with renderLoading and info renders edit correctly 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  info={
    Object {
      "foo": "bar",
    }
  }
  render={[Function]}
  renderLoading={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;

exports[`with renderLoading, fetchingInfo and info renders loading 1`] = `
<div>
  Loading
</div>
`;

exports[`with renderUpdated and not updated renders edit 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  info={undefined}
  render={[Function]}
  renderUpdated={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;

exports[`with renderUpdated and updated renders updated 1`] = `
<div
  foo="bar"
>
  Updated
</div>
`;

exports[`without renderLoading and with fetchingInfo renders edit correctly 1`] = `
<div
  actions={
    Object {
      "update": [Function],
    }
  }
  error={undefined}
  fetchingInfo={true}
  info={undefined}
  render={[Function]}
  update={[Function]}
  updating={undefined}
>
  Edit
</div>
`;
